src/test/deca/test_compilateur/codegen/invalid/created/dereferencement_null.deca
// Description :
//		test utilisation null
//
// Resultats :
//		Erreur de compilateur : déréferencement de null

class B{
void met(){}
}

{
B b = null;
b.met();
}